# calculator-wxWidget

./: .gitignore  Calculator_Mac  Calculator_linux  README.md
src/: App.cc  CMakeLists.txt  MainFrame.cc  MainFrame.h  MathParser.cpp  MathParser.h
